Fix: background black, header font color, and hide scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,21 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
 
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: black;
 }
 
 body {
   margin: 0;
+  background-color: black;
 }
 
+/* to hide scrollbar */
+.hide-scrollbar {
+  -ms-overflow-style: none;  /* Internet Explorer 10+ */
+  scrollbar-width: none;  /* Firefox */
+}
+
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+/* --end to hide scrollbar */
